[package]
name = "ethers-nonce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
thiserror = "1.0.30"
async-trait = "0.1.52"
tokio = "1.17.0"
